--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,6 +1,45 @@
-@import "reset";
-@import "syntax";
+//@import "reset";
+//@import "syntax";
+
+html {
+  font-size: 18px;
+}
 
 body {
     background: yellow;
+}
+
+.element {
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(red, blue);
+}
+
+@keyframes rotate {
+  from { transform: rotate(15deg) }
+  to { transform: rotate(375deg) }
+}
+
+.download {
+  position: absolute;
+  top: 1em;
+  left: -1.5em;
+  width: 6em;
+  height: 6em;
+  padding: 1em 0;
+  background: #80A060;
+  background: linear-gradient(to bottom, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
+  color: white;
+  line-height: 1;
+  font-size: 140%;
+  text-align: center;
+  text-decoration: initial;
+  text-shadow: .08em .08em .2em rgba(0,0,0,.6);
+  border-radius: 50%;
+  box-shadow: .1em .2em .4em -.2em black;
+  box-sizing: border-box;
+  transform: rotate(15deg);
+  animation: rotate;
+  cursor: zoom-in;
 }
