--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/style.css">
 
     </head>
     <body>
@@ -38,4 +38,7 @@
         </div>
 
     </body>
+
+    <script src="//s3-us-west-2.amazonaws.com/s.cdpn.io/68939/ResizeSensor.js"></script>
+    <script src="//s3-us-west-2.amazonaws.com/s.cdpn.io/68939/ElementQueries.js"></script>
 </html>
