--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,10 +1,8 @@
 ---
 layout: default
-bodyclass: post
+bodyclass: contact
 ---
 
 {% include imgBanner.html %}
 
 {% include mainContent.html %}
-
-{% include megaCTA.html %}
