--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,7 @@
 ---
 layout: default
-bodyclass: post
+bodyclass: page
 ---
 
 {% include imgBanner.html %}
-
 {% include mainContent.html %}
-
-{% include megaCTA.html %}
