--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -1,10 +1,12 @@
 ---
 layout: default
-bodyclass: post
+bodyclass: news
 ---
 
 {% include imgBanner.html %}
 
 {% include mainContent.html %}
+
+{% include articleList.html %}
 
 {% include megaCTA.html %}
