--- a/_includes/nav/nav-laxbar.html
+++ b/_includes/nav/nav-laxbar.html
@@ -1,21 +1,7 @@
 <nav class="laxnav">
     <div class="laxnav__bar">
       <a class="brandmark" href="/" target="_blank">
-          <span>S</span>
-          <span>T</span>
-          <span>L</span>
-          <span>O</span>
-          <span>U</span>
-          <span>I</span>
-          <span>S</span>
-          <span class="a">A</span>
-          <span class="r">R</span>
-          <span class="t">T</span>
-          <span>W</span>
-          <span>O</span>
-          <span>R</span>
-          <span>K</span>
-          <span>S</span>
+          <span>{{site.name}}</span>
           <span class="tagline">/ {{site.tagline}}</span>
         </a>
 
