--- a/_scss/modules/_articleCTA.scss
+++ b/_scss/modules/_articleCTA.scss
@@ -9,7 +9,7 @@
 
     &__heading {
         color: $charcoal;
-        font-family: $sans-condensed-light;
+        font-family: $sans;
         font-size: 3em;
         line-height: 1;
         margin: 0;
