--- a/css/style.scss
+++ b/css/style.scss
@@ -4,4 +4,4 @@
 // Gotta keep the "Front Matter" hyphens up above, or this stylesheet will fail when Jekyll tries to compile the Sass!
 
 @import "config/__config";
-//@import "modules/__modules";
+@import "modules/__modules";
