--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,19 +4,20 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
 
-  <title>STLOUISARTWORKS | {{ page.seoTitle }}</title>
+  <title>RhythmKit | {{ page.seoTitle }}</title>
 
   <meta name="author" content="{{ site.name }}" />
   <meta name="description" content="{{ page.seoDescription }}">
 
   {% include socialmeta.html %}
 
-  <script src="//use.typekit.net/rtn4lgy.js"></script>
-  <script>try{Typekit.load();}catch(e){}</script>
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,900,400italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200,400' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro:400,700' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css" />
-  <script src="/js/prefixfree.min.js"></script>
-  <script src="/js/lazysizes.min.js" async=""></script>
+  <script src="/js/src/vnd/lazysizes.min.js" async=""></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 
 
