--- a/_scss/config/__config.scss
+++ b/_scss/config/__config.scss
@@ -3,14 +3,11 @@
 @import "_typography";
 
 
-/* @import "_fonts";
+@import "_fonts";
 @import "_mixins";
 @import "_icons";
 
-
-
 @import "_breakpoints";
-@import "_box-model";
+//@import "_box-model";
 @import "_clear-fix";
 @import "_images";
- */
