--- a/_scss/modules/_articleList.scss
+++ b/_scss/modules/_articleList.scss
@@ -10,7 +10,7 @@
 
     &__heading {
         box-shadow: 0 1px 0 $archgray;
-        font-family: $sans-condensed-light;
+        font-family: $sans;
         font-size: 2em;
         line-height: 1;
     }
