--- a/_scss/modules/_megaCTA.scss
+++ b/_scss/modules/_megaCTA.scss
@@ -3,8 +3,8 @@
     background-repeat: no-repeat;
     background-attachment:fixed;
     background-size:cover;
-    font-family: $sans-condensed-light;
-    //font-family: $sans-condensed-bold;
+    font-family: $sans;
+    //font-family: $sans;
     width:100%;
     height:100%;
     position: relative;
@@ -52,7 +52,7 @@
     &__text {
         color: $white;
         font-size: 6em;
-        font-family: $cursive;
+        font-family: $serif;
         margin: 0;
         text-align: center;
 
