--- a/_scss/modules/_megaStatement.scss
+++ b/_scss/modules/_megaStatement.scss
@@ -1,6 +1,6 @@
 .megaStatement {
     background: $white;
-    font-family: $sans-condensed-light;
+    font-family: $sans;
     width:100%;
     height:100%;
     padding: 3em;
@@ -31,7 +31,7 @@
     &__content {
         color: $white;
         font-size: 6em;
-        font-family: $cursive;
+        font-family: $serif;
         margin: 0;
         padding-bottom: 5rem;
         text-align: center;
