--- a/_scss/modules/_mixin-buttons.scss
+++ b/_scss/modules/_mixin-buttons.scss
@@ -5,7 +5,7 @@
     border-radius: .25em;
     color: $white;
     display: inline-block;
-    font-family: $cursive;
+    font-family: $serif;
     padding: 0 .5em;
     text-align: center;
 
