--- a/_scss/modules/_mixin-headers.scss
+++ b/_scss/modules/_mixin-headers.scss
@@ -4,7 +4,7 @@
 
 @mixin section-header($textColor: $charcoal, $underlineColor: $charcoal) {
     color: $textColor;
-    font-family: $sans-condensed-light;
+    font-family: $sans;
     font-size: 3em;
     line-height: 1;
     margin: 0;
