--- a/_scss/modules/_nav-laxbar.scss
+++ b/_scss/modules/_nav-laxbar.scss
@@ -27,7 +27,7 @@
     line-height: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-size: 1.8em;
+    font-size: 1rem;
     transition: color .4s;
 }
 
@@ -66,7 +66,7 @@ a.brandmark {
 
 .tagline {
     color: $graphite;
-    font-family: $sans-condensed-light;
+    font-family: $sans;
     letter-spacing: 4px;
     text-transform: uppercase;
 }
@@ -84,7 +84,7 @@ a.brandmark {
 .laxnav {
     background: rgba( $white, 0.75);
     cursor: pointer;
-    height: 6.5em; // smaller height because font is smaller
+    //height: 6.5em; // smaller height because font is smaller
     overflow: hidden;
     position: absolute;
     right: 0;
@@ -108,7 +108,8 @@ a.brandmark {
     &__bar {
         //max-width: 75%;
         //margin: 0 auto;
-        padding: 2em;
+        //padding: 2em;
+        @include polar-spacing($outside,1,1);
 
         // name of site in main menu (not user selectable)
          > a {
@@ -180,7 +181,7 @@ a.brandmark {
         color: $stlouisblues;
         display: block;
         font-size: 1.75em;
-        font-family: $sans-condensed-bold;
+        font-family: $sans;
         padding: 0.1em 0.5em;
         text-transform: uppercase;
 
@@ -197,7 +198,7 @@ a.brandmark {
 
     &__link-teaser {
         color: $charcoal;
-        font-family: $sans-condensed-light;
+        font-family: $sans;
         font-size: 1em;
     }
 }
@@ -209,8 +210,8 @@ a.brandmark {
 
 // adds padding to icons
 .icon {
-    padding: 2% 3%;
-    margin: -2% -3%; // center icon in vertical middle of top menu
+    //padding: 2% 3%;
+    //margin: -2% -3%; // center icon in vertical middle of top menu
     cursor: pointer;
     float: right;
     user-select: none;
@@ -219,8 +220,8 @@ a.brandmark {
     span {
         //display: none;
         color: $stlouisblues;
-        font-family: $sans-condensed-light;
-        font-size: 2em;
+        font-family: $sans;
+        font-size: 2rem;
         letter-spacing: 4px;
         text-transform: uppercase;
     }
@@ -247,8 +248,7 @@ a.brandmark {
 // changes icon to an X
 .expanded .icon:before {
     content: 'x';
-    font-size: 1.4em;
-    line-height: 1.4em;
+    font-size: 1rem;
     padding-right: .15em;
 }
 
