ugh, gross commit - tons of clean up ADD mezr

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,16 @@
 <footer class="footer">
-    <div>
-        <p class="footer__text">RhythmKit</p>
-    </div>
+  <div>
+    <p class="footer__text">RhythmKit</p>
+  </div>
 </footer>
 
 <script src="/js/src/vnd/modernizr.js"></script>
-<script src="/js/src/nav-laxbar.js"></script>
-<script src="/js/src/vnd/jquery.fitvids.js"></script>
 <script src="/js/src/vnd/ResizeSensor.js"></script>
 <script src="/js/src/vnd/ElementQueries.js"></script>
+<script src="/js/src/cpl.js"></script>
 <script src="/js/src/script.js"></script>
 
-<script type='text/javascript'>
-(function (d, t) {
-  var bh = d.createElement(t), s = d.getElementsByTagName(t)[0];
-  bh.type = 'text/javascript';
-  bh.src = '//www.bugherd.com/sidebarv2.js?apikey=xxmqxi5890f0liwsbunqgq';
-  s.parentNode.insertBefore(bh, s);
-  })(document, 'script');
+<script>
+  cpl('.cplz', 45, 66, 85);
+  //cpl('.cpl2', 33, 45, 95);
 </script>
