--- a/_scss/config/_colors.scss
+++ b/_scss/config/_colors.scss
@@ -1,4 +1,7 @@
 // Brand Colors
+
+$mint: #00f5a3;
+
 $gooeybutter: #fec057;
 $cardinalred: #ef3e42;
 $stlouisblues: #007ac2;
@@ -11,9 +14,10 @@ $charcoal: #333;
 $graphite: #ccc;
 $silver: #f5f5f5;
 $dirt: #e8e8e2;
-//$red: #f00;
-//$yellow: #ff0;
-//$gold: #f1c40f;
+$red: #f00;
+$yellow: #ff0;
+$gold: #f1c40f;
+$magenta: magenta;
 
 // MAP color to component
 
