--- a/_scss/modules/_nav-laxbar.scss
+++ b/_scss/modules/_nav-laxbar.scss
@@ -109,7 +109,7 @@ a.brandmark {
         //max-width: 75%;
         //margin: 0 auto;
         //padding: 2em;
-        @include polar-spacing($outside,1,1);
+        @include spacing($outside,1,1);
 
         // name of site in main menu (not user selectable)
          > a {
