working on form fields

--- a/_scss/config/_colors.scss
+++ b/_scss/config/_colors.scss
@@ -1,7 +1,5 @@
 // Brand Colors
 
-$mint: #00f5a3;
-
 $gooeybutter: #fec057;
 $cardinalred: #ef3e42;
 $stlouisblues: #007ac2;
@@ -18,6 +16,10 @@ $red: #f00;
 $yellow: #ff0;
 $gold: #f1c40f;
 $magenta: magenta;
+$mint: #00f5a3;
+
+$slime: #67ff22;
+$watermellon: #f63752;
 
 // MAP color to component
 
