--- a/_scss/modules/__modules.scss
+++ b/_scss/modules/__modules.scss
@@ -5,7 +5,7 @@
 @import "_mixin-headers";
 
 @import "_footer";
-@import "_nav-laxbar";
+//@import "_nav-laxbar";
 
 //@import "_imgBanner";            // Default banner used on all interior pages
 //@import "_mainContent";          // Default content block for displaying MarkDown entries
