--- a/_scss/config/_cpl.scss
+++ b/_scss/config/_cpl.scss
@@ -4,37 +4,45 @@ $cpl-background: $magenta;
 $cpl-border-radius: 10%;
 
 .cpl {
-  background-color: rgba($cpl-background, .5);
+  //background-color: rgba($cpl-background, .5);
 
   &__tooltip {
+    border: 1px solid $cpl-background;
     border-radius: $cpl-border-radius;
     color: inherit;
     cursor: pointer;
     position:relative;
-    background: $cpl-background;
-    padding: 0 .2rem;
+    //background: $cpl-background;
+    margin: 0 1px;
+    padding: 0 1px;
 
 
     &::after {
+      background: $cpl-background;
+      border-radius: $cpl-border-radius;
+      color: inherit;
       content: attr(data-tooltip);
       display: block;
       padding: 0 0.5rem;
-      color: inherit;
-      background: $cpl-background;
-      border-radius: $cpl-border-radius;
       opacity: 0;
       position: absolute;
       top: 0;
-      right: 0;
+      right: -1px;
       white-space: nowrap;
       transition: all .2s ease-in-out;
       //box-shadow: 1px 0 1px rgba(100,100,100, .5);
     }
 
-    &:hover::after {
-      //display: block;
-      opacity: 1;
-      top: -1.3rem;
+    &:hover {
+      background: $cpl-background;
+      color: $white;
+
+      &::after {
+        color: $white;
+        //display: block;
+        opacity: 1;
+        top: -1.3rem;
+      }
     }
   }
 
